--- a/src/components/InformationCard.scss
+++ b/src/components/InformationCard.scss
@@ -72,6 +72,8 @@
   font-size: 14px;
   margin-left: 5px;
   letter-spacing: 1pt;
+  white-space: nowrap;
+  cursor: pointer;
 }
 
 .icon-title--hover {
