--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -28,16 +28,16 @@
 
   .first-wave {
     position: absolute;
-    bottom: -60%;
-    left: -55%;
+    bottom: -30%;
+    left: -30%;
     height: 300px;
     transform: rotate(18deg);
   }
 
   .second-wave {
     position: absolute;
-    bottom: -60%;
-    left: -65%;
+    bottom: -30%;
+    left: -60%;
     height: 350px;
     transform: rotate(30deg);
   }
@@ -51,6 +51,7 @@
   bottom: 5px;
   right: 10px;
   letter-spacing: .5pt;
+  z-index: 1;
 
 }
 
@@ -68,4 +69,157 @@ p {
 
 a:link {
   color: transparent;
+}
+
+@media screen and (max-height: 900px) {
+  .first-wave {
+    bottom: -55% !important;
+    left: -50% !important;
+    height: 300px;
+    transform: rotate(18deg);
+  }
+
+  .second-wave {
+    bottom: -55% !important;
+    left: -60% !important;
+    height: 350px;
+    transform: rotate(30deg);
+  }
+}
+
+@media screen and (max-height: 700px) {
+  .first-wave {
+    bottom: -50% !important;
+    left: -70% !important;
+  }
+
+  .second-wave {
+    bottom: -50% !important;
+    left: -75% !important;
+  }
+}
+
+@media screen and (max-width: 1050px) {
+  .home-content {
+    flex-direction: column-reverse;
+  }
+
+  .wave-content {
+
+    .first-wave {
+      bottom: 0 !important;
+      left: 0 !important;
+      height: 200px !important;
+      transform: rotate(0deg) !important;
+    }
+
+    .second-wave {
+      bottom: 0 !important;
+      left: 0 !important;
+      height: 100px !important;
+      transform: rotate(0deg) !important;
+    }
+  }
+}
+
+
+@media screen and (max-width: 780px) {
+  .home-content {
+    padding: 20px;
+  }
+
+  .wave-content {
+
+    .first-wave {
+      height: 170px !important;
+    }
+
+    .second-wave {
+      height: 80px !important;
+    }
+  }
+}
+
+@media screen and (max-width: 570px) {
+  .wave-content {
+
+    .first-wave {
+      height: 130px !important;
+    }
+
+    .second-wave {
+      height: 80px;
+    }
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .home-content {
+    flex-direction: column-reverse;
+  }
+
+  .home-content {
+    padding: 20px;
+  }
+
+  .wave-content {
+    display: flex;
+    position: relative;
+    align-items: flex-end;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+
+    .first-wave {
+      bottom: 0;
+      left: 0;
+      height: 100px !important;
+      transform: rotate(0deg);
+    }
+
+    .second-wave {
+      bottom: 0;
+      left: 0;
+      height: 70px !important;
+      transform: rotate(0deg);
+    }
+  }
+}
+@media screen and (max-width: 375px) {
+  .home-content {
+    flex-direction: column-reverse;
+  }
+
+  .home-content {
+    padding: 20px;
+  }
+
+  .wave-content {
+    display: flex;
+    position: relative;
+    align-items: flex-end;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+
+    .first-wave {
+      bottom: 0;
+      left: 0;
+      height: 80px;
+      transform: rotate(0deg);
+    }
+
+    .second-wave {
+      bottom: 0;
+      left: 0;
+      height: 50px;
+      transform: rotate(0deg);
+    }
+  }
+
+  .footer-text {
+    margin-right: 10px;
+    margin-bottom: 7px;
+    font-size: 10px;
+  }
 }
