feat: add multiple quotes and fade through with time interval

--- a/src/components/InformationCard.scss
+++ b/src/components/InformationCard.scss
@@ -104,6 +104,26 @@
   transition: 0.5s all ease;
 }
 
+.quote--display {
+  position: absolute;
+  top: 0px;
+  opacity:1;
+  transition: all .5s ease;
+}
+
+.quote--hide {
+  position: absolute;
+  top: 0px;
+  opacity:0;
+  transition: all .5s ease;
+}
+
+.info-card__quote-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
 
 @media screen and (max-width: 1051px) {
   .info-card {
@@ -140,7 +160,7 @@
   .info-card {
     max-width: 650px;
     margin-right: 0px;
-    height: 190px;
+    height: 210px;
   }
 
   .info-card__title {
@@ -177,7 +197,7 @@
 
 @media screen and (max-width: 375px) {
   .info-card {
-    height: 180px !important;
+    height: 200px !important;
   }
 
   .info-card__title {
